# Observer_mode

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: base.h  observer.h  subject.h
src/: main.cpp  observer.cpp  subject.cpp
